<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StackX</string>
    <string name="stackExchange">Stack Exchange</string>
    <string name="userName">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="logoutMsg">All your saved preferences, archives etc. will be lost. Okay?</string>
    <string name="noLoginWarn">Without logging in, stackexchange throttles access to few of their APIs. To avoid throttling, it is recommended that you login. Continue?</string>
    <string name="skipLogin">Skip login</string>
    <string name="loading">Loading</string>
    <string name="question">Question</string>
    <string name="questions">Questions</string>
    <string name="answer">Answer</string>
    <string name="answers">Answers</string>
    <string name="comment">Comment</string>
    <string name="comments">Comments</string>
    <string name="upvotes">Upvotes</string>
    <string name="downvotes">Downvotes</string>
    <string name="zero">0</string>
    <string name="accounts">Accounts</string>
    <string name="lastSeen">Last seen</string>
    <string name="refresh">Refresh</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="inbox">Inbox</string>
    <string name="tags">Tags</string>
    <string name="changeSite">Change site</string>
    <string name="settings">Settings</string>
    <string name="score">Score</string>
    <string name="by">by</string>
    <string name="badge">badge</string>
    <string name="avatar">avatar</string>
    <string name="loadingSites">Loading sites</string>
    <string name="loadingSitesForAuthUser">Loading sites, accounts and permissions. This will take few seconds first time.</string>
    <string name="viewQuestion">View Question</string>
    <string name="registered">Registered</string>
    <string name="accepted">Accepted</string>
    <string name="delete">Delete</string>
    <string name="sureQuestion">"Sure ?"</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title">Title</string>
    <string name="views">Views</string>
    <string name="skip">Skip</string>
    <string name="notification">Notification</string>
    <string name="about">About</string>
    <string name="vibrate">Vibrate</string>
    <string name="ringtone">Ringtone</string>
    <string name="account">Account</string>
    <string name="email">Email</string>
    <string name="acceptRate">Accept Rate</string>
    <string name="similar">Similar</string>
    <string name="related">Related</string>
    <string name="general">General</string>
    <string name="defaultSite">Default site</string>
    <string name="hide">Hide</string>
    <string name="add">add</string>
    <string name="addComment">Add comment</string>
    <string name="post">Post</string>
    <string name="save">Save</string>
    <string name="tab">Tab</string>
    <string name="created">Created</string>
    <string name="modified">Modified</string>
    <string name="ran">Ran</string>
    <string name="updated">Updated</string>
    <string name="nada">Nada</string>
    <string name="dontCare">Don\'t care</string>
    <string name="lastRan">Last Ran</string>
    <string name="never">Never</string>
    <string name="time">time</string>
    <string name="times">times</string>
    <string name="goToQuestion">Go To Quesiton</string>
    <string name="writePermissions">Write Permissions</string>
    <string name="writePermissionsInfo">Stack Exchange provide write APIs for comment only, not for question or answer. As you increase your reputation, comment permissions will change accordingly.</string>
    <string name="maxActionsPerDay">Max actions per day</string>
    <string name="Add">Add</string>
    <string name="Edit">Edit</string>
    <string name="Delete">Delete</string>
    <string name="fullscreen">Fullscreen</string>
    <string name="rateApp">Rate App</string>
    <string name="version">Version</string>
    <string name="writeRestrictions">Write restrictions</string>
    <string name="writeRestrictionsSummary">Why can\'t I ask a question or answer a question or upvote or....?</string>
    <string name="inboxSearchHint">Search E.g. comment, stackoverflow, text in title</string>
    <!-- Sites updated -->
    <string name="siteListUpdated">Site list updated!</string>

    <!-- Search filter options -->
    <string name="search_inTitle">Search in title</string>
    <string name="search_hasAnswers">Has Answers</string>
    <string name="search_answered">Answered</string>
    <string name="searchForTag">Search for tag</string>
    <string name="advanced_search">Advanced Search</string>
    <string name="search_query">Query</string>

    <!-- Symbols -->
    <string name="plusSign">+</string>
    <string name="minusSign">-</string>

    <string-array name="searchSortArray">
        <item>relevance</item>
        <item>activity</item>
        <item>creation</item>
        <item>votes</item>
    </string-array>
    <string-array name="searchCriteriaSortArray">
        <item>tabbed</item>
        <item>activity</item>
        <item>creation</item>
        <item>frequency</item>
    </string-array>
    <string-array name="pref_refreshInterval_default_values">
        <item>0</item>
        <item>30</item>
        <item>60</item>
        <item>720</item>
        <item>1440</item>
    </string-array>
    <string-array name="pref_refreshInterval_default_entries">
        <item>Manual</item>
        <item>Every 30 minutes</item>
        <item>Every hour</item>
        <item>Every 12 hours</item>
        <item>Every day</item>
    </string-array>

</resources>