<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="pref_general"
        android:persistent="false"
        android:title="@string/general" >
        <ListPreference
            android:key="pref_defaultSite"
            android:persistent="true"
            android:selectable="false"
            android:title="@string/defaultSite" />
        <ListPreference
            android:key="pref_rateApp"
            android:persistent="true"
            android:title="@string/rateApp" />
        
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_inbox"
        android:persistent="false"
        android:title="@string/inbox" >
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/pref_refreshInterval_default_entries"
            android:entryValues="@array/pref_refreshInterval_default_values"
            android:key="pref_inboxRefreshInterval"
            android:title="@string/refresh" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_newNotification"
            android:title="@string/notification" />
        <CheckBoxPreference
            android:dependency="pref_newNotification"
            android:key="pref_vibrate"
            android:title="@string/vibrate" />

        <RingtonePreference
            android:dependency="pref_newNotification"
            android:key="pref_notificationTone"
            android:ringtoneType="notification"
            android:showDefault="true"
            android:showSilent="true"
            android:title="@string/ringtone" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_account"
        android:persistent="false"
        android:title="@string/account" >
        <ListPreference android:key="pref_accountAction" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_about"        
        android:title="@string/about" >
        <ListPreference
            android:key="pref_ro_appVersion"
            android:selectable="false"
            android:title="@string/version" />
    </PreferenceCategory>
    
</PreferenceScreen>