<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/stackExchangeHeaderLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/delft" >

        <ImageView
            android:id="@+id/stackExchangeImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:contentDescription="@string/stackExchange"
            android:src="@drawable/stack_header_32x32" >
        </ImageView>

        <TextView
            android:id="@+id/stackDisplayTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="3dp"
            android:layout_toRightOf="@id/stackExchangeImage"
            android:gravity="bottom"
            android:text="@string/stackExchange"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/searchSite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/stackExchange"
            android:padding="5dp"
            android:src="@drawable/light_32x32_search" >
        </ImageView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/refreshOnUpdateOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0.75dp"
        android:background="@drawable/rounded_border_delft"
        android:orientation="horizontal"
        android:padding="5dp"
        android:visibility="gone" >

        <TextView
            android:id="@+id/updateInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/siteListUpdated"
            android:textColor="@color/delft"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/cancelRefreshSites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="4dp"
            android:src="@drawable/dark_32x32_cancel" />

        <ImageView
            android:id="@+id/refreshSites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/cancelRefreshSites"
            android:padding="4dp"
            android:src="@drawable/dark_32x32_refresh" />
    </RelativeLayout>

    <EditText
        android:id="@+id/searchText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="@drawable/rounded_border_delft"
        android:cursorVisible="true"
        android:hint="@string/search"
        android:inputType="text"
        android:padding="5dp"
        android:textColor="@color/black"
        android:textCursorDrawable="@null"
        android:textSize="20sp" />

    <include
        android:id="@+id/emptyItems"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        layout="@layout/empty_items"
        android:visibility="gone" />

    <include layout="@layout/stackx_simple_list_view" />
</LinearLayout>